# c2a

./: README.md
backend/: .gitignore  analyze_prompt.txt  app.py  llm.py  my_web3.py  pyproject.toml  test.py
backend/experiments/: .gitignore  __init__.py  analyze_prompt.txt  chatbot.py  test_generate.py  test_invoke.py  test_prompts.txt
backend/experiments/actions/: analyze.py  analyze_prompt.txt  generate_cdp_action.py  generate_cdp_action_prompt.txt
backend/experiments/actions/cdp_actions/: __init__.py  analyze.py  get_all_balances.py  invoke_contract.py  read_contract.py
docs/: setup.md
frontend/: .env.development  .env.testing  .prettierrc  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  config.ts  index.css  main.tsx  vite-env.d.ts  wagmi.ts
frontend/src/api/chat/: index.ts  sse.ts  types.d.ts
frontend/src/components/: AgentAddr.tsx  Base.tsx  ChatActions.tsx  ContractAnalysisModal.tsx  DownloadFileButton.tsx  ErrorBoundary.tsx  HeaderLoginButton.tsx  LoginButton.tsx  TransactionButtonWrapper.tsx  msgConfig.tsx
frontend/src/config/: theme.ts
frontend/src/constants/: transactions.ts
frontend/src/hooks/: useMixinChat.ts
frontend/src/icons/: index.tsx
frontend/src/pages/: Home.tsx  styles.ts
frontend/src/provider/: OnchainProviders copy.tsx  OnchainProviders.tsx
frontend/src/utils/: common.util.ts  getEllipseText.ts  initMd.ts
